<resources>
    <string name="app_name">StackQuestions</string>
    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sample_title">Whats the question?</string>
    <string name="sample_name">Anonimous</string>
    <string name="question_score">score</string>
    <string name="question_times_viewed">times viewed</string>
    <string name="question_answered">Answered</string>
    <string name="question_times_answered">answers</string>
    <string name="question_not_ansewered">Not Answered</string>
    <string name="title_activity_question_detail">QuestionDetailActivity</string>
    <string name="sample_body">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="action_open_in_browser">Open in browser</string>
    <string name="action_share">Share</string>
    <string name="share_msg">Share with</string>
    <string name="question_empty">No question selected</string>
    <string name="error_message">An Error has occured</string>
    <string name="error_button_repeat">Try again</string>
</resources>
