
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="cz.levinzonr.stackquestions.screens.questiondetail.QuestionDetailFragment">


    <LinearLayout
        android:layout_marginTop="@dimen/fab_margin"
        android:id="@+id/question_author_layout"
        android:gravity="end"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <de.hdodenhof.circleimageview.CircleImageView

            android:id="@+id/author_image"
            android:src="@drawable/ic_face_black_24dp"
            android:layout_width="30dp"
            android:layout_height="30dp" />

        <TextView
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginEnd="@dimen/fab_margin"
            android:layout_marginRight="@dimen/fab_margin"
            android:layout_gravity="center"
            android:text="@string/title_activity_question_detail"
            android:id="@+id/author_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <TextView
        android:layout_below="@id/question_author_layout"
        android:id="@+id/questiondetail_title"
        android:textStyle="bold"
        android:textSize="19sp"
        android:text="@string/sample_title"
        android:layout_margin="@dimen/fab_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <android.support.v4.widget.NestedScrollView
        android:layout_below="@id/questiondetail_title"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/question_body"
            android:layout_margin="@dimen/fab_margin"
            android:text="@string/sample_body"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </android.support.v4.widget.NestedScrollView>



</RelativeLayout>
