<?xml version="1.0" encoding="utf-8"?>


<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="150dp">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <TextView
            android:layout_below="@id/question_status_layout"
            android:layout_marginStart="@dimen/fab_margin"
            android:layout_marginLeft="@dimen/fab_margin"
            android:layout_marginTop="3dp"
            android:id="@+id/question_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sample_title"
            android:textSize="18sp"
            android:textStyle="bold"
            />

        <LinearLayout
            android:layout_marginTop="5dp"
            android:layout_marginRight="@dimen/fab_margin"
            android:layout_marginEnd="@dimen/fab_margin"
            android:id="@+id/question_status_layout"
            android:gravity="end"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/question_status_icon"
                android:tint="@color/colorAccent"
                android:src="@drawable/ic_done_black_24dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/question_status_label"
                android:textColor="@color/colorAccent"
                android:layout_gravity="center"
                android:textStyle="bold"
                android:text="@string/question_answered"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <LinearLayout
            android:layout_marginBottom="8dp"
            android:layout_marginStart="@dimen/fab_margin"
            android:layout_marginLeft="@dimen/fab_margin"
            android:layout_alignParentBottom="true"
            android:id="@+id/linearLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:tint="@color/colorPrimary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_visibility_black_24dp" />

            <TextView
                android:layout_gravity="center"
                android:layout_marginLeft="5dp"
                android:layout_marginStart="5dp"
                android:id="@+id/question_times_viewed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question_times_viewed" />


            <ImageView
                android:layout_marginLeft="@dimen/fab_margin"
                android:layout_marginStart="@dimen/fab_margin"
                android:tint="@color/colorPrimary"
                android:src="@drawable/ic_question_answer_black_24dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_gravity="center"
                android:id="@+id/question_times_answered"
                android:layout_marginStart="5dp"
                android:layout_marginLeft="5dp"
                android:text="@string/question_times_answered"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />


        </LinearLayout>


        <LinearLayout
            android:layout_marginTop="5dp"
            android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp"
            android:layout_below="@id/linearLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">


        </LinearLayout>


        <LinearLayout
            android:layout_marginRight="16dp"
            android:layout_marginEnd="16dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:layout_width="wrap_content"
            android:layout_height="21dp"
            android:layout_marginBottom="8dp">

            <de.hdodenhof.circleimageview.CircleImageView
                android:src="@drawable/ic_face_black_24dp"
                android:id="@+id/question_author_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/question_author_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sample_name" />

        </LinearLayout>

    </RelativeLayout>
</android.support.v7.widget.CardView>